# gorae-radar

./: .gitignore  .vercelignore  README.md  package.json  pyproject.toml  vercel.json
.github/workflows/: daily-snapshot.yml
api/: health.py
api/_lib/: radar.js
api/coins/: flow.js
api/market/: fear-greed.js  summary.js
api/radar/: top.js
api/stats/: overview.js
api/wallet/: detail.js
data/snapshots/: 2026-07-12-0217.json  2026-07-18-2058.json  2026-07-18-2332.json  2026-07-18-2340.json  2026-07-19-1250.json  2026-07-20-1301.json  2026-07-21-1241.json  2026-07-22-1242.json  2026-07-23-1241.json  2026-07-24-1240.json
scripts/: app-pages.mjs  audit-static-site.mjs  build-static-site.mjs  build-vercel-live-site.mjs  capture-snapshot.mjs  comparison-pages.mjs  content-pages.mjs  editorial-pages.mjs  export_legacy_snapshot.py  snapshot-pages.mjs
src/smart_money_radar/: __init__.py  backtest.py  smart_money.py  storage.py  web.py
src/smart_money_radar/static/: index.html  robots.txt  sitemap.xml
src/smart_money_radar/static/css/: base.css  components.css  content-v2.css  content.css  investor-remaster.css  layout.css  product-v2.css  refinement.css  system-v2.css  tokens.css  views.css
src/smart_money_radar/static/js/: api.js  coin-icons.js  format.js  main.js  picks.js  refresh.js  render.js  router.js  state.js  watchlist-store.js
tests/: app-pages.test.mjs  comparison-pages.test.mjs  radar-profile.test.mjs  router.test.mjs  snapshot-pages.test.mjs  test_backtest.py  test_smart_money.py  test_storage.py  test_storage_reads.py  test_whale_picks.py
(+10 files in other folders)
