[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smart-money-radar"
version = "0.1.0"
description = "Hyperliquid smart-money wallet discovery and whale dashboard"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.9.0",
]

[project.scripts]
smart-money-radar = "smart_money_radar.web:main"

[tool.hatch.build.targets.wheel]
packages = ["src/smart_money_radar"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.vercel]
entrypoint = "api.health:handler"
